--- a/heatmap_results.ipynb
+++ b/heatmap_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4c474095",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "361bb1ba",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
+   "id": "ad46a785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance for DPP RQ1: 7.505289801200217\n",
+      "Variance for NGS RQ1: 3.1917863337009265\n",
+      "Variance for Convex Hull RQ1: 3.9086442662386167\n",
+      "Variance for Centroid RQ1: 2.6635267973121652\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variance calculation for means\n",
+    "# DPP\n",
+    "print(\"Variance for DPP RQ1:\", np.std(mean_values1[0:8]))\n",
+    "\n",
+    "# Nearest Generated Sample\n",
+    "print(\"Variance for NGS RQ1:\", np.std(mean_values2[0:8]))\n",
+    "\n",
+    "# Convex Hull\n",
+    "print(\"Variance for Convex Hull RQ1:\", np.std(mean_values3[0:8]))\n",
+    "\n",
+    "# Average Distance to Centroid\n",
+    "print(\"Variance for Centroid RQ1:\", np.std(mean_values4[0:8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "b02b37b7",
    "metadata": {},
    "outputs": [
@@ -335,8 +367,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b7ebf65d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance for DPP RQ2: 3.2069260983066012\n",
+      "Variance for NGS RQ2: 1.9968725547715858\n",
+      "Variance for Convex Hull RQ2: 6.462971452822608\n",
+      "Variance for Centroid RQ2: 1.6998161665309577\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variance calculation for means\n",
+    "# DPP\n",
+    "print(\"Variance for DPP RQ2:\", np.std(mean_values1[0:8]))\n",
+    "\n",
+    "# Nearest Generated Sample\n",
+    "print(\"Variance for NGS RQ2:\", np.std(mean_values2[0:8]))\n",
+    "\n",
+    "# Convex Hull\n",
+    "print(\"Variance for Convex Hull RQ2:\", np.std(mean_values3[0:8]))\n",
+    "\n",
+    "# Average Distance to Centroid\n",
+    "print(\"Variance for Centroid RQ2:\", np.std(mean_values4[0:8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b4c014",
    "metadata": {},
    "outputs": [],
    "source": []
