--- a/tempTopP-Adj/heatmap_computations.ipynb
+++ b/tempTopP-Adj/heatmap_computations.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "5484e3d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kevin\\anaconda3\\envs\\research\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "import pandas as pd\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "2f17cd49",
    "metadata": {},
    "outputs": [],
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "d4d9eae5",
    "metadata": {},
    "outputs": [],
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "4ddc01c0",
    "metadata": {},
    "outputs": [],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "f9e0475e",
    "metadata": {},
    "outputs": [],
@@ -503,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "id": "f3bbf488",
    "metadata": {},
    "outputs": [],
@@ -520,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "id": "22055476",
    "metadata": {},
    "outputs": [],
@@ -549,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "id": "2e0a847c",
    "metadata": {},
    "outputs": [],
@@ -568,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "id": "52b4fb30",
    "metadata": {},
    "outputs": [],
@@ -592,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "id": "90438916",
    "metadata": {},
    "outputs": [],
@@ -614,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "1dca3b11",
    "metadata": {},
    "outputs": [],
@@ -635,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "id": "e1289f66",
    "metadata": {},
    "outputs": [],
@@ -661,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "id": "9c81e805",
    "metadata": {},
    "outputs": [
@@ -669,13 +678,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\n",
+      "Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\n",
       "\n",
-      "Percent difference for data/ablation_topic_towels.csv:[20, 8, 13, 23, 1, 0, 21, 2, -2, 0]\n",
-      "Percent difference for data/ablation_topic_powder.csv:[5, 16, 10, 10, 5, -4, 14, 0, 0, 0]\n",
-      "Percent difference for data/ablation_topic_time.csv:[20, 8, 13, 16, 21, 14, 22, 25, 0, 0]\n",
-      "Percent difference for data/ablation_topic_exercise.csv:[6, 6, 3, 10, 6, -1, 2, 3, 6, 0]\n",
-      "Percent difference for data/ablation_topic_froth.csv:[8, 10, 6, 8, 7, 5, 8, 5, 0, 0]\n"
+      "Percent difference for data/ablation_topic_towels.csv:[22, 10, 14, 25, 3, 20, 1, 22, 3, -1, 0]\n",
+      "Percent difference for data/ablation_topic_powder.csv:[5, 16, 10, 10, 5, 7, -4, 14, 0, 0, 0]\n",
+      "Percent difference for data/ablation_topic_time.csv:[20, 8, 13, 16, 21, 19, 14, 22, 25, 0, 0]\n",
+      "Percent difference for data/ablation_topic_exercise.csv:[7, 7, 4, 10, 6, 7, -1, 3, 3, 4, 0]\n",
+      "Percent difference for data/ablation_topic_froth.csv:[8, 10, 6, 8, 7, 4, 5, 8, 5, 0, 0]\n"
      ]
     }
    ],
@@ -688,7 +697,7 @@
     "        percent_diff[csv_file] = []\n",
     "    percent_diff[csv_file].append(value)\n",
     "\n",
-    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
+    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
     "print(\"\")\n",
     "for csv_file, values in percent_diff.items():\n",
     "    percent_changes = percent_change(values)\n",
@@ -697,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "id": "aff1fdf9",
    "metadata": {},
    "outputs": [
@@ -705,13 +714,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\n",
+      "Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\n",
       "\n",
-      "Percent difference for data/ablation_topic_towels.csv:[-24, -15, -17, -24, -10, -8, -22, -9, 3, 0]\n",
-      "Percent difference for data/ablation_topic_powder.csv:[-7, -11, -10, -10, -7, 1, -12, -4, 0, 0]\n",
-      "Percent difference for data/ablation_topic_time.csv:[-16, -9, -11, -11, -16, -13, -17, -18, 1, 0]\n",
-      "Percent difference for data/ablation_topic_exercise.csv:[-4, -4, -2, -5, -4, -1, -1, -4, -2, 0]\n",
-      "Percent difference for data/ablation_topic_froth.csv:[-12, -13, -12, -11, -12, -9, -11, -9, -2, 0]\n"
+      "Percent difference for data/ablation_topic_towels.csv:[-25, -16, -19, -26, -11, -24, -9, -23, -10, 1, 0]\n",
+      "Percent difference for data/ablation_topic_powder.csv:[-7, -11, -10, -10, -7, -7, 1, -12, -4, 0, 0]\n",
+      "Percent difference for data/ablation_topic_time.csv:[-16, -9, -11, -11, -16, -14, -13, -17, -18, 1, 0]\n",
+      "Percent difference for data/ablation_topic_exercise.csv:[-4, -4, -3, -6, -4, -6, -1, -2, -4, -2, 0]\n",
+      "Percent difference for data/ablation_topic_froth.csv:[-12, -13, -12, -11, -12, -10, -9, -11, -9, -2, 0]\n"
      ]
     }
    ],
@@ -724,7 +733,7 @@
     "        percent_diff[csv_file] = []\n",
     "    percent_diff[csv_file].append(value)\n",
     "\n",
-    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
+    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
     "print(\"\")\n",
     "for csv_file, values in percent_diff.items():\n",
     "    percent_changes = percent_change(values)\n",
@@ -733,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "id": "ca2f8b56",
    "metadata": {},
    "outputs": [
@@ -741,13 +750,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\n",
+      "Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\n",
       "\n",
-      "Percent difference for data/ablation_topic_towels.csv:[-98, -94, -95, -98, -84, -81, -97, -87, 26, 0]\n",
-      "Percent difference for data/ablation_topic_powder.csv:[-72, -84, -77, -80, -77, -27, -85, -54, 32, 0]\n",
-      "Percent difference for data/ablation_topic_time.csv:[-95, -84, -86, -86, -95, -92, -95, -96, -12, 0]\n",
-      "Percent difference for data/ablation_topic_exercise.csv:[-46, -46, -45, -55, -54, -47, -37, -58, -19, 0]\n",
-      "Percent difference for data/ablation_topic_froth.csv:[-88, -87, -87, -86, -90, -79, -78, -80, -34, 0]\n"
+      "Percent difference for data/ablation_topic_towels.csv:[-99, -95, -96, -99, -88, -99, -86, -98, -90, -6, 0]\n",
+      "Percent difference for data/ablation_topic_powder.csv:[-72, -84, -77, -80, -77, -72, -27, -85, -54, 32, 0]\n",
+      "Percent difference for data/ablation_topic_time.csv:[-95, -84, -86, -86, -95, -91, -92, -95, -96, -12, 0]\n",
+      "Percent difference for data/ablation_topic_exercise.csv:[-46, -51, -51, -57, -57, -63, -51, -41, -61, -18, 0]\n",
+      "Percent difference for data/ablation_topic_froth.csv:[-88, -87, -87, -86, -90, -81, -79, -78, -80, -34, 0]\n"
      ]
     }
    ],
@@ -762,7 +771,7 @@
     "        percent_diff[csv_file] = []\n",
     "    percent_diff[csv_file].append(value1)\n",
     "\n",
-    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
+    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
     "print(\"\")\n",
     "for csv_file, values in percent_diff.items():\n",
     "    percent_changes = percent_change(values)\n",
@@ -771,10 +780,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "743864e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\n",
+      "\n",
+      "Percent difference for data/ablation_topic_towels.csv:[-28, -20, -21, -28, -14, -26, -12, -25, -12, 1, 0]\n",
+      "Percent difference for data/ablation_topic_powder.csv:[-8, -10, -10, -11, -8, -7, 0, -12, -5, 1, 0]\n",
+      "Percent difference for data/ablation_topic_time.csv:[-17, -10, -11, -11, -16, -13, -15, -18, -19, 1, 0]\n",
+      "Percent difference for data/ablation_topic_exercise.csv:[-4, -4, -2, -5, -4, -5, -3, -1, -5, -1, 0]\n",
+      "Percent difference for data/ablation_topic_froth.csv:[-12, -14, -13, -11, -14, -12, -9, -12, -10, -3, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Centroid Distance percent difference calculation\n",
     "percent_diff = {}\n",
@@ -784,12 +807,28 @@
     "        percent_diff[csv_file] = []\n",
     "    percent_diff[csv_file].append(value)\n",
     "\n",
-    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
+    "print(\"Note order goes zero-shot, few-shot, novel, unique, creative, diverse, critique-critique, design-expert, farfetched, human-1, human-2\")\n",
     "print(\"\")\n",
     "for csv_file, values in percent_diff.items():\n",
     "    percent_changes = percent_change(values)\n",
     "    print(f\"Percent difference for {csv_file}:{percent_changes}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf50f63c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e695f686",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
